[gd_scene load_steps=2 format=3 uid="uid://vumvrpb4wru6"]

[ext_resource type="Script" uid="uid://bej2355876brq" path="res://scripts/ui/RoofDebugUI.gd" id="1"]

[node name="RoofDebugUI" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="DebugPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DebugPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="DebugPanel/VBoxContainer"]
layout_mode = 2
text = "Roof & Interior Debug"
horizontal_alignment = 1

[node name="InfoLabel" type="RichTextLabel" parent="DebugPanel/VBoxContainer"]
custom_minimum_size = Vector2(380, 300)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Debug info will appear here..."

[node name="HBoxContainer" type="HBoxContainer" parent="DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="ToggleVisibilityButton" type="Button" parent="DebugPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Toggle Roofs"

[node name="RefreshButton" type="Button" parent="DebugPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="TestButton" type="Button" parent="DebugPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Test"
